TenantPermsAPI done